tests/compiler/exportDefaultMissingName/index.ts
// From `github.com/microsoft/TypeScript/blob/v5.9.2/tests/cases/compiler/exportDefaultMissingName.ts`, Apache-2.0 License

export default xyzzy;
//~^ ERROR: Cannot find name 'xyzzy'.